--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Spiel Html.loader.js";
+      var loaderUrl = buildUrl + "/Forschungsprojekt.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Spiel Html.data.br",
-        frameworkUrl: buildUrl + "/Spiel Html.framework.js.br",
-        codeUrl: buildUrl + "/Spiel Html.wasm.br",
+        dataUrl: buildUrl + "/Forschungsprojekt.data",
+        frameworkUrl: buildUrl + "/Forschungsprojekt.framework.js",
+        codeUrl: buildUrl + "/Forschungsprojekt.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project (4)",
